@@ -1,8 +1,8 @@
-This is OpenDDS version 3.2, released Tue Jul  3 17:57:50 UTC 2012.
+This is OpenDDS version 3.3, released Fri Sep 28 18:40:22 UTC 2012.
 
 8<----------8<----------8<----------8<----------8<----------8<----------8<----
 
-    OpenDDS VERSION: 3.2
+    OpenDDS VERSION: 3.3
     TAO VERSION:
 
     HOST MACHINE and OPERATING SYSTEM:
