@@ -1,3 +1,7 @@
+Fri Sep 28 18:40:22 UTC 2012  Adam Mitz  <mitza@ociweb.com>
+
+        * OpenDDS version 3.3 released.
+
 Fri Sep 28 18:04:46 UTC 2012  Adam Mitz  <mitza@ociweb.com>
 
         * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
